--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,11 +5,12 @@
 body {
     background-image: url(../images/bife-grelhado-na-superficie-de-madeira-escura_1150-44344.webp);
     width: 100%;
+    background-repeat: no-repeat;
 }
 .container {
     font-family: Arial, Helvetica, sans-serif;
     max-width: 300px;
-    margin: auto;
+    margin: 300px auto;
     background-color: aliceblue;
     padding: 20px;
     border-radius: 10px;
